# MLB-strike-prediction-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: __init__.py  app.py  theme.py
models/: baseline.joblib  logistic_regression.joblib  metrics_test.csv  metrics_test.json  metrics_train.csv  metrics_train.json  xgboost.joblib
notebooks/: 01_eda.ipynb  02_modeling.ipynb
scripts/: download_data.py  evaluate_models.py  make_dataset.py  train_models.py
src/: __init__.py  config.py  dashboard_utils.py  data_download.py  data_prep.py  features.py  models.py  plots.py  utils.py
